# backend

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.db  Dockerfile.initdb  app.py  deny.toml  dummy-etc-passwd  requirements.txt
info/: Cargo.toml
initdb/: Cargo.toml
initdb/src/: main.rs
log/: Cargo.toml
log/src/: lib.rs
migrations/2020-07-31-162358_create_tables/: down.sql  up.sql
migrations/2021-01-11-121136_create_open_recordings_view/: down.sql  up.sql
migrations/2021-01-11-175323_add_category_description/: down.sql  up.sql
migrations/2021-04-01-132255_add-emails/: down.sql  up.sql
migrations/versions/: a17cb8f73e8e_initial_migration.py
server/: Cargo.toml
server/src/: audio.rs  config.rs  db.rs  environment.rs  errors.rs  info.rs  io.rs  label.rs  lib.rs  log.rs  main.rs  mime_type.rs  recording.rs  routes.rs  store.rs  urls.rs
server/src/queries/: check_availability.sql  create.sql  create_key.sql  delete_key.sql  delete_recording_tokens.sql  lookup_key.sql  remove_token.sql  retrieve.sql  retrieve_by_token.sql  retrieve_categories.sql  retrieve_genders.sql  retrieve_token.sql  update_url.sql
server/src/routes/: admin.rs  handlers.rs  query.rs  rejection.rs  response.rs
server/tests/: data.sql  failing.webm  http.rs
src/: audio.rs  config.rs  db.rs  environment.rs  errors.rs  io.rs  label.rs  lib.rs  main.rs  mime_type.rs  normalization.rs  queries.rs  recording.rs  routes.rs  store.rs  urls.rs
src/audio/: format.rs
src/queries/: acquire_token.sql  count.sql  create.sql  create_token.sql  delete.sql  release_token.sql  retrieve.sql  retrieve_ages.sql  retrieve_categories.sql  retrieve_children.sql  retrieve_format_essences.sql  retrieve_mime_type.sql  retrieve_random.sql  rollback_using_token.sql  update_privacy.sql  update_url.sql
src/routes/: rejection.rs
src/store/: mock.rs
tests/: data.sql  duplicate_metadata.json  http.rs  simple_metadata.json  simple_metadata_children.json  simple_metadata_with_same_token.json
tools/: entrypoint.sh
