[package]
name = "backend"
version = "0.1.0"
authors = ["Shiv Jha-Mathur"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
serde_derive = "1.0.110"
unicode-normalization = "0.1.12"
sqlx = { version = "0.3.5", default-features = false, features = [ "postgres", "runtime-tokio", "time", "uuid" ] }
time = "0.2.16"
thiserror = "1.0.20"
warp = "0.2.3"
tokio = { version = "0.2.21", features = [ "macros" ] }
futures = "0.3.5"
bytes = "0.5.4"
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }
rusoto_s3 = "0.44.0"
rusoto_core = "0.44.0"
rusoto_credential = "0.44.0"
dotenv = "0.15.0"
slog = "2.5.2"
slog-async = "2.5.0"
slog-json = "2.3.0"
pretty_env_logger = "0.4.0"

[dev-dependencies]
proptest = "0.10.0"
slog-term = "2.6.0"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
incremental = false
