[package]
name = "backend"
version = "2.0.0"
authors = ["Shiv Jha-Mathur"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.1.1", features = ["serde"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
serde_derive = "1.0.110"
unicode-normalization = "0.1.12"
sqlx = { version = "0.3.5", default-features = false, features = [ "macros", "postgres", "runtime-tokio", "time", "uuid" ] }
time = { version = "0.2.16", features = ["serde"] }
thiserror = "1.0.20"
warp = "0.2.3"
tokio = { version = "0.2.21", features = [ "macros" ] }
futures = "0.3.5"
bytes = "0.5.4"
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }
rusoto_s3 = "0.44.0"
rusoto_core = "0.44.0"
rusoto_credential = "0.44.0"
dotenv = "0.15.0"
slog = "2.5.2"
slog-async = "2.5.0"
slog-json = "2.3.0"
pretty_env_logger = "0.4.0"
ffmpeg-next = { version = "4.3.0", optional = true }
tempfile = "3.1.0"
lazy_static = "1.4.0"
postgres = "0.17.5"
slog-term = "2.6.0"

[features]
use_ffmpeg_sys = ["ffmpeg-next"]

[dev-dependencies]
proptest = "0.10.0"
movine = "0.8.0"
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"
once_cell = "1.4.0"
slog-envlogger = "2.2.0"
reqwest = "0.10.7"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
incremental = false
