[package]
name = "backend"
version = "2.0.0"
authors = ["Shiv Jha-Mathur"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
cfg-if = "0.1.10"
dotenv = "0.15.0"
ffmpeg-next = { version = "4.3.0", optional = true }
futures = "0.3.5"
lazy_static = "1.4.0"
postgres = "0.17.5"
rusoto_core = "0.45.0"
rusoto_credential = "0.45.0"
rusoto_s3 = "0.45.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = "1.0.53"
slog = { version = "2.5.2", features = ["max_level_trace"] }
slog-async = "2.5.0"
slog-envlogger = { version = "2.2.0", optional = true }
slog-json = "2.3.0"
sqlx = { version = "0.3.5", default-features = false, features = [ "macros", "postgres", "runtime-tokio", "time", "uuid" ] }
tempfile = "3.1.0"
thiserror = "1.0.20"
time = { version = "0.2.16", features = ["serde"] }
tokio = { version = "0.2.21", features = [ "macros" ] }
unicode-normalization = "0.1.12"
url = { version = "2.1.1", features = ["serde"] }
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }
warp = "0.2.3"
which = { version = "4.0.2", optional = true }
mime = "0.3.16"

[features]
default = ["which"]
enable_warp_logging = ["slog-envlogger"]
use_ffmpeg_sys = ["ffmpeg-next"]

[dev-dependencies]
movine = "0.8.0"
once_cell = "1.4.0"
proptest = "0.10.0"
reqwest = "0.10.7"
slog-envlogger = "2.2.0"
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"

[profile.release]
lto = true
codegen-units = 1
incremental = false
