[package]
name = "initdb"
version = "0.1.0"
authors = ["Shiv Jha-Mathur <4199779-shivjm@users.noreply.gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
movine = "0.10.0"
postgres = "0.17.0"
warp = "0.2.3"
tokio = { version = "0.2.21", features = [ "macros" ] }
serde = { version = "1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
futures = "0.3.8"
dotenv = "0.15.0"
info = { path = "../info" }
log = { path = "../log" }
