[package]
name = "initdb"
version = "0.1.0"
authors = ["Shiv Jha-Mathur <4199779-shivjm@users.noreply.gitlab.com>"]
edition = "2018"
private = true

[dependencies]
postgres = "0.19.1"
dotenv = "0.15.0"
info = { path = "../info" }
log = { path = "../log" }
movine = { version = "0.11.1", default-features = false, features = ["with-rustls"] }
