[package]
name = "log"
version = "0.1.0"
authors = ["Shiv Jha-Mathur <4199779-shivjm@users.noreply.gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = { version = "2.5.2", features = ["max_level_trace"] }
slog-async = "2.5.0"
slog-json = "2.3.0"
info = { path = "../info" }
