[package]
name = "log"
version = "0.1.0"
authors = ["Shiv Jha-Mathur <4199779-shivjm@users.noreply.gitlab.com>"]
edition = "2018"
private = true

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
slog = { version = "2.5.2", features = ["max_level_trace"] }
slog-async = "2.5.0"
slog-json = "2.3.0"
info = { path = "../info" }
slog-scope = { version = "4.0.1", optional = true }
slog-envlogger = { version = "2.2.0", optional = true }

[features]
env_logging = ["slog-scope", "slog-envlogger", "lazy_static"]
