[package]
name = "backend"
version = "2.0.0"
authors = ["Shiv Jha-Mathur"]
edition = "2018"
default-run = "backend"
private = true

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "generate-tokens"
path = "src/bin/generate-tokens.rs"
required-features = ["helpers"]

[dependencies]
bytes = "1.0.1"
dotenv = "0.15.0"
ffmpeg-next = { version = "4.3.8", optional = true }
futures = "0.3.13"
lazy_static = "1.4.0"
postgres = "0.19.1"
rusoto_core = { version = "0.46.0", default-features = false, features = ["rustls"] }
rusoto_credential = "0.46.0"
rusoto_s3 = { version = "0.46.0", default-features = false, features = ["rustls"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = "1.0.53"
sqlx = { version = "0.5", default-features = false, features = ["macros", "postgres", "time", "runtime-tokio-rustls", "uuid"] }
tempfile = "3.1.0"
thiserror = "1.0.20"
time = { version = "0.2.16", features = ["serde"] }
tokio = { version = "1.4.0", features = ["io-util", "macros", "process", "signal"] }
unicode-normalization = "0.1.12"
url = { version = "2.1.1", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
warp = "0.3.1"
which = { version = "4.0.2", optional = true }
mime = "0.3.16"
structopt = { version = "0.3.20", optional = true }
info = { path = "../info" }
log = { path = "../log" }
tokio-stream = { version = "0.1.5", features = ["io-util"] }

[features]
default = ["which"]
env_logging = ["log/env_logging"]
helpers = ["structopt"]
use_ffmpeg_sys = ["ffmpeg-next"]

[dev-dependencies]
movine = { version = "0.11.1", default-features = false, features = ["with-rustls"] }
proptest = "0.10.0"
reqwest = "0.11.2"
futures-timer = "3.0.2"
